@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Only poll mailboxes in dynamic view that exist in the browser folder tree.
 * [mms] Fix regression in displaying From address on mailbox page in traditional view.
 * [mms] Fix updating the compose address fields when using the contacts popup.
  </notes>
@@ -2689,8 +2690,9 @@
    <date>2012-02-28</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Only poll mailboxes in dynamic view that exist in the browser folder tree.
 * [mms] Fix regression in displaying From address on mailbox page in traditional view.
-* [mms] Fix updating the compose address fields when using the contacts popup and a search is done in that popup.
+* [mms] Fix updating the compose address fields when using the contacts popup.
    </notes>
   </release>
  </changelog>
