@@ -2,6 +2,8 @@
 v5.0.20-git
 -----------
 
+[mms] Only poll mailboxes in dynamic view that exist in the browser folder
+      tree.
 [mms] Fix regression in displaying From address on mailbox page in traditional
       view.
 [mms] Fix updating the compose address fields when using the contacts popup.
